kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: wordpress
spec:
  selector:
    matchLabels:
      app: wp-frontend
  replicas: 2
  template:
    metadata:
      labels:
        app: wp-frontend
    spec:
      containers:
      - name: wordpress
        image: wordpress:5.2.2-php7.1-apache
        imagePullPolicy: Always
        ports:
          - containerPort: 80
            name: http
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
