kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: wordpress
  labels:
    app: wp-frontend
spec:
  clusterIP: None
  ports:
  - port: 80
    name: http
  selector:
    app: wp-frontend
